link in html to README.md

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
+    <h1>Basics</h1>
+    <a href="https://mejbvandijck.github.io/README.md">Standard commands</a>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+    <p>more to write here...</p>
 
 </body>
 </html>
