--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
-<body>
-    <h1>Basics</h1>
-    <a href="https://mejbvandijck.github.io/README.md">Standard commands</a>
-
-    <p>more to write here...</p>
-
-</body>
+<html lang="nl">
+	<head>
+		<title>Mijn eerste website</title>
+		<link rel="stylesheet" href="css/stylesheet.css">
+		<script src="js/script.js" defer></script>
+	</head>
+	<body>
+		<h1>Mijn eerste website</h1>
+		<p>Zoals de titel al doet vermoeden, is dit mijn eerste website op het web.</p>
+	</body>
 </html>
